feat: list registrations by player
