# cmd/root.go
@@ -46,6 +46,7 @@ var App = &cli.App{
 		router.GET("/api/competitions/:id", h.GetCompetition, middleware.Auth)
 		router.PATCH("/api/competitions/:id", h.UpdateCompetition, middleware.Auth)
 		router.DELETE("/api/competitions/:id", h.DeleteCompetition, middleware.Auth)
+		router.GET("/api/users/:user_id/registrations", h.ListPlayerRegistrations, middleware.Auth)
 
 		router.POST("/api/competitions/:id/registrations", h.RegisterForCompetition, middleware.Auth)
 		router.GET("/api/competitions/:id/registrations", h.ListCompetitionRegistrations, middleware.Auth)
